Added links to the GitHub Repository

--- a/index.html
+++ b/index.html
@@ -14,5 +14,21 @@
   </head>
   <body>
     <h1>Welcome to Cape Verde</h1>
+
+    <footer>
+      This project was coded by
+      <a
+        href="https://www.shecodes.io/graduates/69966-sara-cristina-andrade-dos-santos"
+        target="_blank"
+        >Sara Santos</a
+      >
+      and is
+      <a
+        href="https://github.com/sarasantospt/cape-verde-travel-project"
+        target="_blank"
+        >opened sourced</a
+      >
+      on Github🌴✈️.
+    </footer>
   </body>
 </html>
