Added a subtitle to the homepage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>Welcome to Cape Verde</h1>
+    <h2>A paradise of sun, sea, and soul🌴</h2>
 
     <footer>
       This project was coded by
