--- a/index.html
+++ b/index.html
@@ -13,23 +13,28 @@
     <title>Welcome to Cape Verde</title>
   </head>
   <body>
-    <h1>Welcome to Cape Verde</h1>
-    <h2>A paradise of sun, sea, and soul🌴</h2>
-
-    <footer>
-      This project was coded by
-      <a
-        href="https://www.shecodes.io/graduates/69966-sara-cristina-andrade-dos-santos"
-        target="_blank"
-        >Sara Santos</a
-      >
-      and is
-      <a
-        href="https://github.com/sarasantospt/cape-verde-travel-project"
-        target="_blank"
-        >opened sourced</a
-      >
-      on Github🌴✈️.
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Cape Verde</h1>
+        <h2>A paradise of sun, sea & soul</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by
+        <a
+          href="https://www.shecodes.io/graduates/69966-sara-cristina-andrade-dos-santos"
+          target="_blank"
+          >Sara Santos</a
+        >
+        and is
+        <a
+          href="https://github.com/sarasantospt/cape-verde-travel-project"
+          target="_blank"
+          >opened sourced</a
+        >
+        on Github🌴✈️.
+      </footer>
+    </div>
   </body>
 </html>
