--- a/index.html
+++ b/index.html
@@ -20,21 +20,59 @@
         <h2>A paradise of sun, sea & soul</h2>
         <a href="#more">Learn more</a>
       </header>
-      <footer>
-        This project was coded by
-        <a
-          href="https://www.shecodes.io/graduates/69966-sara-cristina-andrade-dos-santos"
-          target="_blank"
-          >Sara Santos</a
-        >
-        and is
-        <a
-          href="https://github.com/sarasantospt/cape-verde-travel-project"
-          target="_blank"
-          >opened sourced</a
-        >
-        on Github🌴✈️.
-      </footer>
     </div>
+    <footer>
+      <section class="grid">
+        <div>
+          <h3>More about Cape Verde</h3>
+          <ul>
+            <li>
+              <a
+                href="https://www.caboverde-airports.cv/en/homepage/"
+                target="_blank"
+                >Cape Verde Airports</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/NXKxKSpTXDp4gjVX9"
+                target="_blank"
+                >Map of Cape Verde</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.crumbsnatched.com/cape-verdean-food-recipes/"
+                target="_blank"
+                >Cape Verdean Cuisine</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About Me</h3>
+          <p>
+            Hi! My name is Sara. I created this page as I am half Cape Verdean,
+            and want to celebrate my heritage while sharing the beauty and
+            culture of the islands with others.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+            <br />
+            This project was coded by Sara and is
+            <a
+              href="https://github.com/sarasantospt/cape-verde-travel-project"
+              target="_blank"
+              >opened sourced</a
+            >
+            on Github🌴✈️.
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
