Added grid templates

--- a/index.html
+++ b/index.html
@@ -20,58 +20,88 @@
         <h2>A paradise of sun, sea & soul</h2>
         <a href="#more">Learn more</a>
       </header>
-    <footer>
-      <section class="grid">
-        <div>
-          <h3>More about Cape Verde</h3>
-          <ul>
-            <li>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/islands.jpg"
+              alt="Chapel in Cape Verde"
+              img="img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why Cape Verde?</h2>
+            <h3>History of the Islands</h3>
+            <p>
+              Cape Verde, an archipelago off the west coast of Africa, has a
+              rich history shaped by its strategic location in the Atlantic.
+              Uninhabited until Portuguese explorers arrived in 1456, the
+              islands became a hub for the transatlantic slave trade, blending
+              African and European cultures to create a unique Creole identity.
+            </p>
+
+            <p>
+              Despite its wealth during the trade era, Cape Verde suffered from
+              pirate raids, colonial neglect, and devastating famines caused by
+              frequent droughts. This history of resilience and cultural fusion
+              is reflected in its vibrant music, language, and traditions.
+            </p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <section class="grid grid-3-columns-with-first-narrow">
+          <div>
+            <h3>More about Cape Verde</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.caboverde-airports.cv/en/homepage/"
+                  target="_blank"
+                  >Cape Verde Airports</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/NXKxKSpTXDp4gjVX9"
+                  target="_blank"
+                  >Map of Cape Verde</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.crumbsnatched.com/cape-verdean-food-recipes/"
+                  target="_blank"
+                  >Cape Verdean Cuisine</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Sara. I created this page as I am half Cape
+              Verdean, and want to celebrate my heritage while sharing the
+              beauty and culture of the islands with others.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              This project was coded by Sara and is
               <a
-                href="https://www.caboverde-airports.cv/en/homepage/"
+                href="https://github.com/sarasantospt/cape-verde-travel-project"
                 target="_blank"
-                >Cape Verde Airports</a
+                >opened sourced</a
               >
-            </li>
-            <li>
-              <a
-                href="https://maps.app.goo.gl/NXKxKSpTXDp4gjVX9"
-                target="_blank"
-                >Map of Cape Verde</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.crumbsnatched.com/cape-verdean-food-recipes/"
-                target="_blank"
-                >Cape Verdean Cuisine</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About Me</h3>
-          <p>
-            Hi! My name is Sara. I created this page as I am half Cape Verdean,
-            and want to celebrate my heritage while sharing the beauty and
-            culture of the islands with others.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            I created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-            <br />
-            This project was coded by Sara and is
-            <a
-              href="https://github.com/sarasantospt/cape-verde-travel-project"
-              target="_blank"
-              >opened sourced</a
-            >
-            on Github🌴✈️.
-          </p>
-        </div>
-      </section>
-    </footer>
+              on Github🌴✈️.
+            </p>
+          </div>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
