Added cards to the landing page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,119 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-center">Food and Drinks</h2>
+          <h3 class="text-center">Eating and Drinking in Cape Verde</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/buddy-bar.jpg"
+                  alt="Buddy Bar in Santa Maria"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Buddy Bar</h4>
+                <p>
+                  Buddy Bar is one of the best places to hear authentic local
+                  music in Cape Verde, with nightly performances by local
+                  artists in the bar's intimate space. They boast an extensive
+                  and affordable drinks menu specialising in gin, with over 15
+                  varieties.
+                </p>
+                <h5>Adress:</h5>
+                <p>Rua 1 de Junho, Santa Maria</p>
+                <h5>What I like about it?</h5>
+                <p>
+                  Buddy Bar has a vibrant atmosphere and stunning views of the
+                  oceon. The staff are super friendly and the cocktails are
+                  delicious making it a perfect spot to relax and enjoy the
+                  local culture.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/7cqnC1uL3k3RPn389"
+                  class="btn"
+                  target="_blank"
+                  >Learn more
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/kebra-cabana.jpg"
+                  alt="Kebra-Cabana in Santiago"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Kebra Cabana</h4>
+                <p>
+                  Kebra Cabana is one of the coolest restaurants/bars in Praia,
+                  with a prime location by the beach and delicious homemade
+                  food. Young and fashionable people gather at Kebra Cabana in
+                  droves to groove to the weekly live music.
+                </p>
+                <h5>Adress:</h5>
+                <p>Quebra Canela, Praia</p>
+                <h5>What I like about it?</h5>
+                <p>
+                  I enjoy Kebra Cabana for its laid-vack vibe and stunning
+                  beachfront location. The delicious local cuisine and friendly
+                  atmosphere make it a perfedt spot to unwind and soak in the
+                  beauty of the Island.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/SQHpojbYxzCbKv6N6"
+                  class="btn"
+                  target="_blank"
+                  >Learn more
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/cape-fruit-sal.jpg"
+                  alt="Cape Fruit in Sal Island"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Cape Fruit</h4>
+                <p>
+                  Cape Fruit is a small but absolutely charming café that
+                  focuses on healthy living and healthy eating. It is one of the
+                  few places that cater to vegetarians and vegans, offering
+                  delicious meat-free options for breakfast and lunch.
+                </p>
+                <h5>Adress:</h5>
+                <p>Rua 15 de Agosto, Santa Maria</p>
+                <h5>What I like about it?</h5>
+                <p>
+                  I love Cape Fruit because of its incredible freshness and
+                  vibrant flavours that truly capture the essence of the island.
+                  Each bite is a delightful reminder of the tropical paradise
+                  and rich agricultural heritage of the region.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/3em78MKUj24cHaqCA"
+                  class="btn"
+                  target="_blank"
+                  >Learn more
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-with-first-narrow">
