Added responsive Google maps embed

--- a/index.html
+++ b/index.html
@@ -54,12 +54,20 @@
 
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/cafes/buddy-bar.jpg"
                   alt="Buddy Bar in Santa Maria"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3823.5589513086793!2d-22.908597324852707!3d16.598693684160192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b5c0a824f116f%3A0xc49618f02a892b2f!2sBuddy%20Bar!5e0!3m2!1sen!2suk!4v1738782092007!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Buddy Bar</h4>
@@ -90,12 +98,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/cafes/kebra-cabana.jpg"
                   alt="Kebra-Cabana in Santiago"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3855.5863494390123!2d-23.519972424887918!3d14.904391085618734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93598f3bacf8de5%3A0x298b334c4e8c6137!2sKebra%20Cabana!5e0!3m2!1sen!2suk!4v1738783277905!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Kebra Cabana</h4>
@@ -125,12 +141,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/cafes/cape-fruit-sal.jpg"
                   alt="Cape Fruit in Sal Island"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3823.5866346024372!2d-22.90454932485281!3d16.597301984161422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b5bf4cdcd2df5%3A0x876bfac3b4ae7c02!2sCape%20Fruit!5e0!3m2!1sen!2suk!4v1738783367191!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Cape Fruit</h4>
