--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img
               src="images/islands.jpg"
               alt="Chapel in Cape Verde"
-              img="img-responsive"
+              class="img-responsive"
             />
           </div>
           <div>
