Made slight changes to About me paragraph

--- a/index.html
+++ b/index.html
@@ -1072,9 +1072,9 @@
           <div>
             <h3>About Me</h3>
             <p>
-              Hi! My name is Sara. I created this page as I am proud to be half Cape
-              Verdean, and wanted to celebrate my heritage while sharing the
-              beauty and culture of the islands with others.
+              Hi! My name is Sara. I created this page as I am proud to be half
+              Cape Verdean, and wanted to celebrate my heritage while sharing
+              the beauty and culture of the islands with others.
             </p>
           </div>
           <div>
