Added 'more' ID to section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#more">Learn more</a>
       </header>
       <main>
-        <section class="grid grid-2-columns">
+        <section class="grid grid-2-columns" id="more">
           <div>
             <img
               src="images/islands.jpg"
